@@ -23,6 +23,20 @@ The app written in MVC architecture and has following classes, files and methods
  
  - View.fxml (User-interface)
  
+ How To Use:
+ - After cloning this repository, you need to add following lines to VM options in Edit Configurations:
+ Windows:
+  --module-path
+"\path\to\javafx\sdk\lib"
+--add-modules
+javafx.controls,javafx.fxml
+
+ Mac:
+ --module-path
+"/path/to/javafx/sdk/lib"
+--add-modules
+javafx.controls,javafx.fxml
+ 
  Screenshot:
  ![Image of example screenshot] (https://github.com/Arnazarov/RSSNewsReader/blob/master/Screenshot.JPG)
  
